# mini-deno

./: Cargo.toml  README.md
scripts/: 00_util.js  01_init.js  01_version.js  01_web_util.js  99_main.js
scripts/os/: 01_os_ops.js  02_os_env.js  90_os_ns.js
src/: build_snapshot.rs  colors.rs  fs_util.rs  main.rs  permissions.rs
src/extensions/: core.rs  mod.rs  os.rs  permissions.rs
